Fix: z-index for test

--- a/src/components/MapHome/PopularSports/PopularSports.module.scss
+++ b/src/components/MapHome/PopularSports/PopularSports.module.scss
@@ -24,7 +24,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  z-index: 10;
+  z-index: 20;
   overflow: visible;
 }
 
